# image-renderer

./: .editorconfig  CMakeLists.txt  LICENSE  Makefile  README.md  log_settings.hpp
.dictionaries/: dict_embedded.txt  dict_en.txt
cmake/: fetch_raw_lib.cmake  print_target_size.cmake  set_cmake_variables.cmake  set_ext_path.cmake  set_inc_path.cmake  set_runtime_output_directory.cmake  set_src_path.cmake
commander/: CMakeLists.txt
commander/include/: Commander.hpp  execution.hpp
commander/src/: Commander.cpp  execution.cpp  main.cpp
renderer/: CMakeLists.txt
renderer/include/: Renderer.hpp  commands.hpp
renderer/src/: Renderer.cpp  commands.cpp  main.cpp
samples/: CMakeLists.txt  basic.txt  crop_extend.txt  invalid_arguments  squared.txt
scripts/: generate_inputs.py
sdk/: CMakeLists.txt
sdk/dice/: CMakeLists.txt  Dicer.hpp
sdk/graphics/: CMakeLists.txt
sdk/graphics/include/: Image.hpp  Paint.hpp
sdk/graphics/src/: Image.cpp
sdk/logging/: CMakeLists.txt  logging.hpp  logging_backend.hpp
sdk/shell/: CMakeLists.txt
sdk/shell/include/: Channel.hpp  Command.hpp  CommandParser.hpp
sdk/shell/src/: Channel.cpp  CommandParser.cpp
sdk/validation/: CMakeLists.txt
sdk/validation/include/: exceptions.hpp  validation.hpp
sdk/validation/src/: validation.cpp
